@@ -170,10 +170,10 @@ public class RediSearchQuery implements RepositoryQuery {
           });
           aggregationGroups.add(group);
         });
-        Arrays.stream(aggregation.sortBy()).forEach(sortBy -> {
-          SortedField sortedField = sortBy.direction().isAscending() ? SortedField.asc(sortBy.field())
+        Arrays.stream(aggregation.sortBy()).forEach(sb -> {
+          SortedField sortedField = sb.direction().isAscending() ? SortedField.asc(sb.field())
               : SortedField.desc(
-                  sortBy.field());
+                  sb.field());
           aggregationSortedFields.add(sortedField);
         });
 
@@ -212,7 +212,7 @@ public class RediSearchQuery implements RepositoryQuery {
       orPart.iterator().forEachRemaining(part -> {
         PropertyPath propertyPath = part.getProperty();
 
-        List<PropertyPath> path = StreamSupport.stream(propertyPath.spliterator(), false).collect(Collectors.toList());
+        List<PropertyPath> path = StreamSupport.stream(propertyPath.spliterator(), false).toList();
         orPartParts.addAll(extractQueryFields(domainType, part, path));
       });
       queryOrParts.add(orPartParts);
@@ -288,12 +288,14 @@ public class RediSearchQuery implements RepositoryQuery {
               } else {
                 qf.add(Pair.of(actualKey, QueryClause.get(FieldType.GEO, part.getType())));
               }
-            } else { // String or Boolean
+            } else if (CharSequence.class.isAssignableFrom(collectionType) || (collectionType == Boolean.class)) {
               if (isANDQuery) {
                 qf.add(Pair.of(actualKey, QueryClause.TAG_CONTAINING_ALL));
               } else {
                 qf.add(Pair.of(actualKey, QueryClause.get(FieldType.TAG, part.getType())));
               }
+            } else {
+              qf.addAll(extractQueryFields(collectionType, part, path, level + 1));
             }
           }
         }
@@ -576,7 +578,13 @@ public class RediSearchQuery implements RepositoryQuery {
       while (iterator.hasNext()) {
         Parameter p = iterator.next();
         Optional<String> maybeKey = p.getName();
-        String key = (maybeKey.isPresent() ? maybeKey.get() : (paramNames.size() > index ? paramNames.get(index) : ""));
+        String key;
+        if (maybeKey.isPresent()) {
+          key = maybeKey.get();
+        } else {
+          key = paramNames.size() > index ? paramNames.get(index) : "";
+        }
+
         if (!key.isBlank()) {
           String v;
 
